# vyasa-agent

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DHARMA-REVIEW-01.md  Dockerfile  KAPOOR-MARKETING-01.md  KAVACH-SECURITY-01.md  LAUNCH-DRAFT-01.md  NOTICE  README.md  REDDY-ENVATO-AUDIT-01.md  docker-compose.yml  pyproject.toml  vyasa.yaml
.github/: dependabot.yml
.github/workflows/: docker-publish.yml  envato-bundle.yml  license-check.yml  lint.yml  release.yml  test.yml  white-label-check.yml
docs/: api.md  install.md  troubleshooting.md
docs/release-notes/: v0.1.0a1.md
plans/dr-bose/: graph-compaction.yaml
plans/dr-reddy/: envato-license-health.yaml
plans/dr-sarabhai/: weekly-retro.yaml
plans/kavach/: capability-audit.yaml
plans/vyasa/: daily-morning-briefing.yaml
scripts/: envato-bundle.sh  fetch-vendor.sh  install.sh  migrate_graph_v1_to_v2.py  rename-sweep.sh  white-label-check.sh
tests/: test_admin_panel.py  test_bridge.py  test_capability.py  test_cli.py  test_fleet_descriptor.py  test_fleet_manager.py  test_graphify.py  test_mcp_server.py  test_router.py  test_routines.py  test_settings_bridge.py  test_telegram_stream.py  test_vendor_import.py
tests/integration/: __init__.py  conftest.py  test_doctor.py  test_duo_console.py  test_duo_telegram.py  test_graph_round_trip.py
vyasa_agent/: cli.py  cli_support.py
vyasa_agent/admin_panel/: app.py  auth.py  deps.py  errors.py  seeds.py  settings_store.py
vyasa_agent/admin_panel/routers/: __init__.py  admin.py  employees.py  graph.py  license.py  messages.py
vyasa_agent/fleet/: actor.py  audit.py  bridge.py  capability.py  descriptor.py  hooks.py  manager.py  registry_resolver.py  settings_bridge.py  tool_name_to_capability.py  types.py  vyasa_specialists.py
vyasa_agent/gateway/: router.py  streaming.py  types.py
vyasa_agent/gateway/adapters/: __init__.py  base.py  console.py  telegram.py
vyasa_agent/graphify/: __init__.py  checksum.py  compactor.py  mcp_client.py  mcp_server.py  pii.py  store.py  types.py  vector.py
vyasa_agent/graphify/schema/: 001_init.sql
vyasa_agent/routines/: __init__.py  runner.py  types.py
